--- a/css/style.css
+++ b/css/style.css
@@ -5418,7 +5418,7 @@ table tbody td:first-child {
 .client-single img {
   position: relative;
   top: 0;
-  width: 200px !important;
+  width: auto !important;
   opacity: 0.9;
   transition: all 0.15s;
 }
@@ -6245,10 +6245,10 @@ select option[disabled] {
 /* Marquee animation */
 @keyframes marquee {
   from {
-      transform: translateX(80%); /* Start from right */
+      transform: translateX(95%); /* Start from right */
   }
   to {
-      transform: translateX(-80%); /* Move to left */
+      transform: translateX(-95%); /* Move to left */
   }
 }
 
